media-server/apps/deployement-sabnzbd.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
  namespace: media-server
  labels:
    app: sabnzbd
spec:
  selector:
    matchLabels:
      app: sabnzbd
  replicas: 1
  template:
    metadata:
      labels:
        app: sabnzbd
    spec:
      containers:
      - name: sabnzbd
        image: ghcr.io/linuxserver/sabnzbd
        imagePullPolicy: IfNotPresent
        #securityContext:
          #runAsUser: 1001
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 2000m
            memory: 2Gi
        livenessProbe:
          httpGet:
            scheme: HTTP
            path: /
            port: 8080
          initialDelaySeconds: 60
          timeoutSeconds: 15
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 60
        #readinessProbe:
          #httpGet:
            #path: /_status/healthz
            #port: 80
          #initialDelaySeconds: 5
          #timeoutSeconds: 2
          #successThreshold: 1
          #failureThreshold: 3
          #periodSeconds: 10
        ports:
        - containerPort:  8080
          name:  http
        volumeMounts:
        - name: pv-downloads
          mountPath: /data/downloads
        - name: nfs-appdata
          mountPath: /config
      volumes:
        - name: pv-downloads
          persistentVolumeClaim:
            claimName: pvc-downloads
        - name: nfs-appdata
          persistentVolumeClaim:
            claimName: pvc-appdata-sabnzbd
      restartPolicy: Always

---

#Service


apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: media-server
spec:
  selector:
    app: sabnzbd
  type: LoadBalancer
  ports:
  - name: sabnzbd
    port: 8080 
    targetPort: 8080
    protocol: TCP
