media-server/apps/deployment-bazarr.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: media-server
  labels:
    app: bazarr
spec:
  selector:
    matchLabels:
      app: bazarr
  replicas: 1
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      containers:
      - name:  bazarr
        image: ghcr.io/linuxserver/bazarr
        imagePullPolicy: IfNotPresent
        #securityContext:
          #runAsUser: 1001
        resources:
          requests:
            cpu: 200m
            memory: 100Mi
          limits:
            cpu: 300m
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /
            port: 6767
          initialDelaySeconds: 60
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 60
        #readinessProbe:
          #httpGet:
            #path: /_status/healthz
            #port: 80
          #initialDelaySeconds: 5
          #timeoutSeconds: 2
          #successThreshold: 1
          #failureThreshold: 3
          #periodSeconds: 10
        ports:
        - containerPort:  7878
          name:  http
        volumeMounts:
        - name: pv-shows
          mountPath: /data/shows
        - name: pv-movies
          mountPath: /data/movies
        - name: nfs-appdata
          mountPath: /config
      volumes:
        - name: pv-movies
          persistentVolumeClaim:
            claimName: pvc-movies
        - name: pv-shows
          persistentVolumeClaim:
            claimName: pvc-shows
        - name: nfs-appdata
          persistentVolumeClaim:
            claimName: pvc-appdata-bazarr
      restartPolicy: Always
---

#Service


apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: media-server
spec:
  selector:
    app: bazarr
  type: LoadBalancer
  ports:
  - name: bazarr
    port: 6767
    targetPort: 6767
    protocol: TCP
