media-server/apps/deployment-emby.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: emby
  namespace: media-server
  labels:
    app: emby
spec:
  selector:
    matchLabels:
      app: emby
  replicas: 1
  template:
    metadata:
      labels:
        app: emby
    spec:
      containers:
      - name:  emby
        securityContext:
          privileged: true
        image: linuxserver/emby
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 1000m
            memory: 4000Mi
          limits:
            cpu: 2000m
            memory: 6Gi
        livenessProbe:
          httpGet:
            path: /
            port: 8096
          initialDelaySeconds: 60
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 60
        #readinessProbe:
          #httpGet:
            #path: /_status/healthz
            #port: 80
          #initialDelaySeconds: 5
          #timeoutSeconds: 2
          #successThreshold: 1
          #failureThreshold: 3
          #periodSeconds: 10
        ports:
        - containerPort: 8096
          name: http
        volumeMounts:
        - name: pv-shows
          mountPath: /data/shows
        - name: pv-movies
          mountPath: /data/movies
        - name: nfs-appdata
          mountPath: /config
        - name: pv-nvidia
          mountPath: /dev/dri
      volumes:
        - name: pv-movies
          persistentVolumeClaim:
            claimName: pvc-movies
        - name: pv-nvidia
          hostPath:
            path: /dev/dri
            type: Directory
        - name: pv-shows
          persistentVolumeClaim:
            claimName: pvc-shows
        - name: nfs-appdata
          persistentVolumeClaim:
            claimName: pvc-appdata-emby
      restartPolicy: Always

---

#Service


apiVersion: v1
kind: Service
metadata:
  name: emby
  namespace: media-server
spec:
  selector:
    app: emby
  type: LoadBalancer
  ports:
  - name: emby
    port: 8096
    targetPort: 8096
    protocol: TCP
