media-server/apps/deployment-hydra2.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: hydra2
  namespace: media-server
  labels:
    app: hydra2
spec:
  selector:
    matchLabels:
      app: hydra2
  replicas: 1
  template:
    metadata:
      labels:
        app: hydra2
    spec:
      containers:
      - name: hydra2
        #securityContext:
          #runAsUser: 1001
        image: ghcr.io/linuxserver/nzbhydra2
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 300m
            memory: 100Mi
          limits:
            cpu: 500m
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /
            port: 5076
          initialDelaySeconds: 60
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 60
        #readinessProbe:
          #httpGet:
            #path: /_status/healthz
            #port: 80
          #initialDelaySeconds: 5
          #timeoutSeconds: 2
          #successThreshold: 1
          #failureThreshold: 3
          #periodSeconds: 10
        ports:
        - containerPort:  7878
          name:  http
        volumeMounts:
        - name: pv-downloads
          mountPath: /data/downloads
        - name: nfs-appdata
          mountPath: /config
      volumes:
        - name: pv-downloads
          persistentVolumeClaim:
            claimName: pvc-downloads
        - name: nfs-appdata
          persistentVolumeClaim:
            claimName: pvc-appdata-hydra2
      restartPolicy: Always

---

#Service

apiVersion: v1
kind: Service
metadata:
  name: hydra2
  namespace: media-server
spec:
  selector:
    app: hydra2
  type: LoadBalancer
  ports:
  - name: hydra2
    port: 5076
    targetPort: 5076
    protocol: TCP
