media-server/apps/deployment-ombi.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ombi
  namespace: media-server
  labels:
    app: ombi
spec:
  selector:
    matchLabels:
      app: ombi
  replicas: 1
  template:
    metadata:
      labels:
        app: ombi
    spec:
      containers:
      - name: ombi
        image: ghcr.io/linuxserver/ombi
        imagePullPolicy: IfNotPresent
        #securityContext:
          #runAsUser: 1001
        resources:
          requests:
            cpu: 100m
            memory: 250Mi
          limits:
            cpu: 250m #1000m=1core
            memory: 500Mi
        livenessProbe:
          httpGet:
            path: /
            port: 3579
          initialDelaySeconds: 15
          timeoutSeconds: 15
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort: 3579
          name:  http
      restartPolicy: Always

---

#Loadbalancer Service


apiVersion: v1
kind: Service
metadata:
  name: ombi
  namespace: media-server
spec:
  selector:
    app: ombi
  type: LoadBalancer
  ports:
  - name: ombi
    port: 3579
    targetPort: 3579
    protocol: TCP
