media-server/apps/deployment-plex.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: media-server
  labels:
    app: plex
spec:
  selector:
    matchLabels:
      app: plex
  replicas: 1
  template:
    metadata:
      labels:
        app: plex
    spec:
      hostNetwork: true  # USE ONLY FOR INITIAL SETUP
      containers:
      - name:  plex
        image: plexinc/pms-docker
        imagePullPolicy: IfNotPresent
        #securityContext:
          #runAsUser: 1001
        resources:
          requests:
            cpu: 1000m
            memory: 4000Mi
          limits:
            cpu: 2000m
            memory: 6Gi
        livenessProbe:
          httpGet:
            path: /web
            port: 32400
          initialDelaySeconds: 60
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 60
        readinessProbe:
          exec:
            command:
              - cat
              - /data/movies/health
          initialDelaySeconds: 60
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 45
        securityContext:
          privileged: true
        ports:
        - containerPort: 32400
          name: http
        volumeMounts:
        - name: pv-shows
          mountPath: /data/shows
        - name: pv-movies
          mountPath: /data/movies
        - name: glusterfs-appdata
          mountPath: /config
        - name: pv-nvidia
          mountPath: /dev/dri
      volumes:
        - name: pv-movies
          persistentVolumeClaim:
            claimName: pvc-movies
        - name: pv-nvidia
          hostPath:
            path: /dev/dri
            type: Directory
        - name: pv-shows
          persistentVolumeClaim:
            claimName: pvc-shows
        - name: glusterfs-appdata
          glusterfs:
            endpoints: glusterfs-cluster
            path: gv0/appdata/plex/
      restartPolicy: Always

---

#Service

apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: media-server
spec:
  selector:
    app: plex
  type: NodePort
  ports:
  - name: plex
    port: 32400
    targetPort: 32400
    protocol: TCP
    nodePort: 32400
