media-server/apps/deployment-radarr.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media-server
  labels:
    app: radarr
spec:
  selector:
    matchLabels:
      app: radarr
  replicas: 1
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
      - name: radarr
        image: ghcr.io/linuxserver/radarr
        imagePullPolicy: IfNotPresent
        #securityContext:
          #runAsUser: 1001
        resources:
          requests:
            cpu: 500m
            memory: 500Mi
          limits:
            cpu: 2000m
            memory: 2Gi
        livenessProbe:
          httpGet:
            scheme: HTTP
            path: /
            port: 7878
          initialDelaySeconds: 30
          timeoutSeconds: 15
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          exec:
            command:
              - cat
              - /data/movies/health
          initialDelaySeconds: 15
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort:  7878
          name:  http
        volumeMounts:
        - name: pv-downloads
          mountPath: /data/downloads
        - name: pv-movies
          mountPath: /data/movies
        - name: gfs-appdata
          mountPath: /config
      volumes:
        - name: pv-movies
          persistentVolumeClaim:
            claimName: pvc-movies
        - name: pv-downloads
          persistentVolumeClaim:
            claimName: pvc-downloads
        - name: gfs-appdata
          glusterfs:
            endpoints: gfs-cluster
            path: gv0/appdata/radarr
      restartPolicy: Always

---
#Service


apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media-server
spec:
  selector:
    app: radarr
  type: LoadBalancer
  ports:
  - name: radarr
    port: 7878
    targetPort: 7878
    protocol: TCP
