media-server/apps/deployment-sonarr.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media-server
  labels:
    app: sonarr
spec:
  selector:
    matchLabels:
      app: sonarr
  replicas: 1
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - name: sonarr
        image: ghcr.io/linuxserver/sonarr
        imagePullPolicy: IfNotPresent
        #securityContext:
          #runAsUser: 1001
        resources:
          requests:
            cpu: 500m
            memory: 500Mi
          limits:
            cpu: 2000m #1000m=1core
            memory: 2Gi
        livenessProbe:
          httpGet:
            path: /
            port: 8989
          initialDelaySeconds: 60
          timeoutSeconds: 15
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 60
        readinessProbe:
          exec:
            command:
              - cat
              - /data/shows/health
          initialDelaySeconds: 60
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 4
        ports:
        - containerPort: 8989
          name:  http
        volumeMounts:
        - name: pv-shows
          mountPath: /data/shows
        - name: gfs-appdata
          mountPath: /config
        - name: pv-downloads
          mountPath: /data/downloads
      volumes:
        - name: pv-downloads
          persistentVolumeClaim:
            claimName: pvc-downloads
        - name: pv-shows
          persistentVolumeClaim:
            claimName: pvc-shows
        - name: gfs-appdata
          glusterfs:
            endpoints: gfs-cluster
            path: gv0/appdata/sonarr
      restartPolicy: Always

---

#Loadbalancer Service


apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media-server
spec:
  selector:
    app: sonarr
  type: LoadBalancer
  ports:
  - name: sonarr
    port: 8989
    targetPort: 8989
    protocol: TCP
