media-server/apps/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: tautulli
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "tautulli.torrenegra.page"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tautulli
spec:
  hosts:
  - "tautulli.torrenegra.page"
  gateways:
  - httpbin-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 8181
        host: tautulli
